--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=Authentication_server
+
+spring.datasource.url=jdbc:mysql://localhost:3306/auth_demo
+spring.datasource.platform=mysql
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
+spring.jpa.hibernate.ddl-auto=update
+
+spring.security.user.name=rathan
+spring.security.user.password=123456
