--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.ddl-auto=update
 
 spring.security.user.name=rathan
-spring.security.user.password=123456
+spring.security.user.password=rathan@4567
