added new github login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,12 @@ spring.datasource.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
 spring.jpa.hibernate.ddl-auto=update
 
+server.port=8000
+
+auth.secretKey=78CA1D3BFB75EE2F44DC9C82661B5D241A7BFE851E16FAADA5CC116926
+auth.github.clientId=Ov23liC2H76jrDQJiZfe
+auth.github.clientSecret=c6565cc564ee88d22e8733845de6cbc4233828f4
+auth.github.redirect_url=http://localhost:8000/auth/github/callback
+auth.github.tokenURl=https://github.com/login/oauth/access_token
 spring.security.user.name=rathan
 spring.security.user.password=rathan@4567
