--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.3.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
